src/styles/components/_navMenu.scss
&-NavMenu {
	position: relative;
	display: block;

	@include min-screen(769px) {
		position: absolute;
		width: 100%;
		bottom: 6px;
	}

	@include min-screen(1025px) {
		position: relative;
		width: auto;
		bottom: -42px;
	}

	@import '_search';

	/* Wrapper for the NavMenu */
	&-Wrapper {

		@include min-screen(769px) {
			max-width: $PAGE_WIDTH_WRAPPER_DESKTOP;
			text-align: right;
			margin: 0 auto;
		}

		/* Controls the display of Mobile View */
		&.mobileActive {
			margin-top: -1px;
			position: absolute;
			width: 100%;
			z-index: 1000;

			@include min-screen(769px) {
				position: initial;
				margin-top: 0px;
				width: initial;
			}

			/* Displays NavMenu on Mobile with proper class on parent */
			#NavMenu-List {
				display: block;

				@include min-screen(769px) {
					display: inline-table;
				}
			}
			
			/* Only display Logo Text on Mobile */
			.MobileLogoText {
				display: block;

				@include min-screen(769px) {
					display: none;
				}
			}

			/* Only display BottomButtons on Mobile */
			.MobileBottomButtons {
				display: block;

				@include min-screen(769px) {
					display: none;
				}
			}
		}

  	.MobileBottomButtons {
  		/* Hide on all viewports, trigger display based on class */
  		display: none;
  	}
  	
  	.MobileLogoText {
  		/* Hide on all viewports, trigger display based on class */
  		display: none;
  		position: absolute;
  		top: 20px;
  		left: 15px;
  		color: #FFF;
  		font-size: 85px;
  	}
	}

	&-List {
  	display: none;
  	background-color: #2B2B2B;
  	padding: 10px 0;
  	margin: 0;
  	list-style-type: none;
  	text-align: right;
  	vertical-align: 0px;

  	@include min-screen(769px) {
  		margin: 0;
  		display: inline-table;
  		background-color: transparent;
  		padding: 0;
  	}

  	/* Top level Link Rules */
  	.NavMenuItem {
  		padding: 8px 0;
  		margin: 3.5px 15px 0px 0;
  		display: block;

		  &.DonateButtonItem {
		  	display: none;

		  	@include min-screen(769px) {
		  		display: inline-block;
		  		margin-left: 10px;
		  	}

	  		@include min-screen(1025px) {
	  			margin-left: 7px;
	  		}
		  }

		  @include min-screen(769px) {
  			display: inline-block;
  			padding: 0;
  			line-height: normal !important;
  			margin: 0 0 0 10px;

  			&:first-child {
  				margin-left: 0px;
  			}
		  }

  		@include min-screen(1025px) {
  			margin: 0 0 0 8px;
  		}

			&-Link {
	  		position: relative;
	  		display: inline-block;
	  		padding: 0;
	  		margin: 0;

	  		&:hover {
	  			cursor: pointer;
	  		}

	  		& > a {
	  			display: block;
	  			color: #FFF;
	  			@include Kievit-Book;
	  			font-size: 18px;

		  		&:visited, &:active, &:focus, &:hover {
		  			text-decoration: none;
		  			border: none;
		  		}

		  		&:focus {
		  			outline: initial;
		  		}

		  		@include min-screen(769px) {
	  				color: #000;
		  			font-size: 18px;
	  				padding: 0px 4px;
		  		}

	  			@include min-screen(1025px) {
	  				font-size: 16px;
	  				padding: 0px 7px;
	  			}
	  		}
	  	}

	  	&-Arrow {
	  		display: none;
	  		font-size: 25px;
	  		position: absolute;
	  		left: 30%;
	  		z-index: 999;

	  		@include min-screen(769px) {
	  			top: 19px;
	  		}

	  		@include min-screen(1025px) {
	  			top: 15.75px;
	  		}

				/* Arrow Assignment for Tablets and up */
				@include min-screen(769px) {
					&.active {
						display: block;
					}

		  		/* BROWSE */
		  		&-29a4b824-e084-4771-aafc-52b3586c5e49 {
			  		&.active {
			  			color: $BG_MENU_BROWSE_RIGHT;
			  		}
		  		}

		  		/* LEARN */
		  		&-925d1fa9-1138-403c-9990-38861902b02d {
			  		&.active {
			  			color: $BG_MENU_LEARN_RIGHT;
			  		}
		  		}

		  		/* ATTEND */
		  		&-851ed351-08f5-43f0-9011-9c317f85f0ca {
			  		&.active {
			  			color: $BG_MENU_ATTEND_RIGHT;
			  		}
		  		}

		  		/* FIND US */
		  		&-df621833-4dd1-4223-83e5-6ad7f98ad26a {
			  		&.active {
			  			color: $BG_MENU_FINDUS_RIGHT;
			  		}
		  		}

		  		/* RESEARCH */
		  		&-4bd4f525-3f5c-4c45-b7a7-0ee6bbd301e9 {
			  		&.active {
			  			color: $BG_MENU_RESEARCH_RIGHT;
			  		}
		  		}

		  		/* GIVE */
		  		&-1d9ea0ec-6ca3-4577-9dd1-e8de1f2a8bb1 {
			  		&.active {
			  			color: $BG_MENU_GIVE_RIGHT;
			  		}
		  		}

			  	/* GET HELP */
			  	&-13d95ad5-f117-4415-ba2c-5c0b9618984d {
			  		&.active {
			  			color: $BG_MENU_HELP_RIGHT;
			  		}  		
			  	}
				}
	  	}
  	}

  	/* MegaMenu Rules */
	  .MegaMenu {
	  	display: none;
	  	color: #FFFFFF;
	  	width: 100%;
  		position: absolute;
	  	left: 0;

	  	/* Only display MegaMenu's on  Tablet and up */
	  	&.active {

	  		@include min-screen(769px) {
	  			display: block;
	  			top: 45px;
	  			z-index: 999;
	  		}

	  		@include min-screen(1025px) {
	  			top: 43.5px;
	  		}
	  	}

	  	&-LeftBgWrapper {
				width: 50%;
				position: absolute;
				left: 0;
				z-index: 0;

				@include min-screen(769px) {
					min-height: $MAIN_MENU_TABLET_HEIGHT;
				}

				@include min-screen(1025px) {
					min-height: $MAIN_MENU_DESKTOP_HEIGHT;
				}
	  	}

	  	&-Wrapper {
	  		width: 100%;
		  	display: block;
		  	margin: 0 auto;
		  	max-width: $PAGE_WIDTH_WRAPPER_DESKTOP;
		  	z-index: 1;
		  	position: relative;

				@include min-screen(769px) {
					min-height: $MAIN_MENU_TABLET_HEIGHT;
				}

				@include min-screen(1025px) {
					min-height: $MAIN_MENU_DESKTOP_HEIGHT;
				}
	  	}

	  	&-SubNavWrapper {
	  		position: absolute;
	  		display: block;
	  		margin: 0;
	  		padding: 0;

	  		@include min-screen(769px) {
	  			width: 280px;
	  			min-height: $MAIN_MENU_TABLET_HEIGHT;
	  		}

	  		@include min-screen(1025px) {
	  			width: 310px;
	  			min-height: $MAIN_MENU_DESKTOP_HEIGHT;
	  		}
	  	}

	  	&-SubNav {
	  		position: absolute;
	  		right: $LEFT_NAV_RIGHT_MARGIN;
	  		text-align: left;

	  		@include min-screen(769px) {
	  			width: 138px;
	  		}

	  		@include min-screen(1025px) {
	  			width: 140px;
	  		}

	  		a {
	  			color: #FFFFFF;
	  		}

	  		h2 {
	  			color: #FFFFFF;
	  			border-top: 2px solid #FFFFFF;
	  			margin: 35px 0 0px;
	  			padding: 12px 0 30px;
					font-weight: 400;
					font-size: 22px;
	  		}

	  		& > ul {
	  			margin: 0;
	  			padding: 0;
	  			list-style-type: none;

	  			li {
	  				margin: 5px 0px 12px 0;
	  				display: block;
	  				padding: 0;
	  				line-height: 1.25em;

	  				&:first-child {
	  					margin-top: 0px;
	  				}
	  				
	  				a {
	  					font-size: 16.5px;
	  					margin: 0;
	  					padding: 0;
	  					display: block;
	  				}
	  			}
	  		}

	  		&-SocialMediaWidget {
	  			padding: 2px;
	  			margin: 15px 0 0 0;

	  			ul {
	  				list-style-type: none;
	  				margin: 0;
	  				padding: 0;

	  				li {
	  					display: inline-block;
	  					margin: 0 10px 0 0;
	  					line-height: 0;

	  					&:last-child {
	  						margin-right: 0;
	  					}

	  					a {
	  						text-decoration: none;
	  						display: block;
	  						font-size: 45px;
	  					}
	  				}
	  			}
	  		}
	  	}

	  	&-FeaturesWrapper {
	  		display: block;
	  		width: auto;
	  		padding: 0;
	  		text-align: left;

	  		@include min-screen(769px) {
	  			margin: 0 20px 0 280px;
					min-height: $MAIN_MENU_TABLET_HEIGHT;
	  		}

	  		@include min-screen(1025px) {
	  			margin: 0 20px 0 310px;
	  			min-height: $MAIN_MENU_DESKTOP_HEIGHT;
	  		}
	  	}

	  	&-Features {
	  		display: block;
	  		margin: 0;
	  		padding: 0;
	  		width: 100%;
	  		height: 100%;
	  	}

	  	&-FeatureItem {
	  		display: inline-table;
	  		width: 50%;
	  		height: 100%;
	  		margin: 0;
	  		padding: 0;

				&-Wrapper {
					display: block;
					position: relative;
					top: 50px;

					@include min-screen(769px) {
						margin: 0 0 0 31px;
					}

					@include min-screen(1140px) {
						margin: 0 0 0 $RIGHT_NAV_CONTAINER_LEFT_MARGIN;				
					}
				}
	  	}
	  }

	  @import '_megaMenuColors';
	}

	.StickyItems {
		display: none;

		.DonateButton {
			display: none;

			@include min-screen(892px) {
				display: inline-block;
			}
		}

		@include min-screen(769px) {	
			&.active {
				display: inline-block;
			}
		}

		@include min-screen(892px) {
			// Used with the above DonateButton class to display correctly.	
			margin-right: 20px;
		}
	}

	/* FEATURE ITEM
	 * --------------
	 * Specific SASS rules for
	 * this reusable feature item
	 * content box within the Header
	*/ 
	@import '_featureItem';


	/* FIND US WIDGET
	 * --------------
	 * Specific SASS rules for
	 * this widget within the Header.
	*/ 
	@import '_findUsWidget';


	/* DONATE WIDGET
	 * --------------
	 * Specific SASS rules for
	 * this widget within the Header.
	*/ 
	@import '_donateWidget';
}

